# Market_sim

./: .gitignore  README.md
backend/: README.md  main.py  migrate.sql  pyproject.toml
backend/api/: orders.py  users.py  websockets.py
backend/api/utils/: orders.py  users.py
backend/auth/: dependencies.py  utils.py
backend/bots/: bots.py
backend/db/: db_connect.py
backend/db/schema/: user.sql
backend/matching_engine/: matching_engine.py
backend/order_book/: order_book.py
backend/pydantic_schemas/: orders.py  stock.py  user.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/app/auth/login/: page.jsx
frontend/src/app/auth/signup/: page.jsx
frontend/src/app/orders/: page.jsx
frontend/src/app/portfolio/: page.jsx
frontend/src/app/profile/: page.jsx
frontend/src/app/stocks/: orderDialog.jsx
frontend/src/app/stocks/[symbol]/: page.jsx
frontend/src/components/: navbar.jsx
frontend/src/context/: authContext.jsx
frontend/src/lib/: utils.js
