[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
package-mode = false  # ← Add this line
[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
fastapi = "^0.135.3"
uvicorn = "^0.42.0"
psycopg2-binary = "^2.9.11"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.48"
dotenv = "^0.9.9"
python-dotenv = "^1.2.2"
bcrypt = "^5.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jwt = "^1.4.0"
python-jose = "^3.5.0"
apscheduler = "^3.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"